--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "wd-file-server",
-  "version" : "0.0.1",
-  "main": "server.js",
+  "name": "file-server",
+  "description": "A file server prototype designed for the Raspberry Pi",
+  "author": "James Taylor",
+  "private": true,
   "dependencies": {
-    "ejs": "2.3.1",
-    "express": "4.12.2",
+    "ejs": ">= 2.3.1",
+    "express": ">= 4.12.2",
+    "multer": ">= 0.1.8",
+    "body-parser": ">= 1.12.3",
+    "mkdirp": ">= 0.5.0",
+    "forever": ">= 0.14.1"
   },
   "repository" : {
-  	"type" : "git",
-    "url" : "https://github.com/jamestaylr/wd-file-server.git"
-  }
+    "type" : "git",
+    "url" : "https://github.com/jamestaylr/file-server.git"
+  },
+  "engine": "node 0.12.0"
 }
