--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "multer": ">= 0.1.8",
     "body-parser": ">= 1.12.3",
     "mkdirp": ">= 0.5.0",
-    "forever": ">= 0.14.1"
+    "forever": ">= 0.14.1",
+    "sanitize-filename": ">= 1.3.0"
   },
   "repository" : {
     "type" : "git",
